--- a/pages/index.html
+++ b/pages/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+.nav-bar{
+    width: 100%;
+}
+</style>
+
 <body>
     <h1>Index page</h1>
-    
+    <div class="nav-bar">
+    <img src="../images/home.jpg" class="nav-logo" width="100%"/>
 
     </div>
 </body>
