--- a/pages/index.html
+++ b/pages/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/style.css">
+    
 </head>
 
-<style>
-.nav-bar{
-    width: 100%;
-}
-</style>
+
 
 <body>
     <h1>Index page</h1>
     <div class="nav-bar">
-    <img src="../images/home.jpg" class="nav-logo" width="100%"/>
+    <img src="../images/home.jpg" class="nav-logo" />
 
     </div>
 </body>
